[JSC] intlBooleanOption should return TriState instead of taking an out param https://bugs.webkit.org/show_bug.cgi?id=211256

Reviewed by Darin Adler and Mark Lam.

Boolean options for Intl constructors can have default values of true, false, or undefined.
To handle the undefined case, intlBooleanOption currently has a `bool& usesFallback` param;
we should have the return type simply be a TriState instead.

* runtime/IntlCollator.cpp:
(JSC::IntlCollator::initializeCollator):
* runtime/IntlDateTimeFormat.cpp:
(JSC::IntlDateTimeFormat::initializeDateTimeFormat):
* runtime/IntlNumberFormat.cpp:
(JSC::IntlNumberFormat::initializeNumberFormat):
* runtime/IntlObject.cpp:
(JSC::intlBooleanOption):
* runtime/IntlObject.h:


Canonical link: https://commits.webkit.org/224158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260976 268f45cc-cd09-0410-ab3c-d52691b4dbfc