Source/JavaScriptCore/runtime/IntlDateTimeFormat.cpp
@@ -466,15 +466,15 @@ void IntlDateTimeFormat::initializeDateTimeFormat(JSGlobalObject* globalObject, 
         opt.add("nu"_s, numberingSystem);
     }
 
-    bool isHour12Undefined;
-    bool hour12 = intlBooleanOption(globalObject, options, vm.propertyNames->hour12, isHour12Undefined);
+    TriState hour12 = intlBooleanOption(globalObject, options, vm.propertyNames->hour12);
     RETURN_IF_EXCEPTION(scope, void());
+    bool isHour12Undefined = (hour12 == MixedTriState);
 
     String hourCycle = intlStringOption(globalObject, options, vm.propertyNames->hourCycle, { "h11", "h12", "h23", "h24" }, "hourCycle must be \"h11\", \"h12\", \"h23\", or \"h24\"", nullptr);
     RETURN_IF_EXCEPTION(scope, void());
     if (isHour12Undefined) {
         // Set hour12 here to simplify hour logic later.
-        hour12 = (hourCycle == "h11" || hourCycle == "h12");
+        hour12 = triState(hourCycle == "h11" || hourCycle == "h12");
         if (!hourCycle.isNull())
             opt.add("hc"_s, hourCycle);
     } else
@@ -582,14 +582,14 @@ void IntlDateTimeFormat::initializeDateTimeFormat(JSGlobalObject* globalObject, 
     if (hour == "2-digit") {
         if (isHour12Undefined && m_hourCycle.isNull())
             skeletonBuilder.appendLiteral("jj");
-        else if (hour12)
+        else if (hour12 == TrueTriState)
             skeletonBuilder.appendLiteral("hh");
         else
             skeletonBuilder.appendLiteral("HH");
     } else if (hour == "numeric") {
         if (isHour12Undefined && m_hourCycle.isNull())
             skeletonBuilder.append('j');
-        else if (hour12)
+        else if (hour12 == TrueTriState)
             skeletonBuilder.append('h');
         else
             skeletonBuilder.append('H');
